7/12/01: Implemented glPushAttrib/glPopAttrib (Greg)
7/13/01: Removed opcode names from packer/packer.c (Greg)
7/13/01: Started writing swapping packer (Greg)
7/13/01: Added endianness determining code (Greg)
7/13/01: Added missing double read/write code (!) (Greg)
7/13-17/01: Added swapping packer.  Still need to swap packet headers (Greg)
7/17/01: Finished swapping code. (Greg)
7/17/01: Broadcast parallel API commands (yikes)
7/18/01: Added cr_version.h file (BrianP)
7/19/01: Added proxy texture support (BrianP)
7/19/01: New CRTextureUnit struct in cr_texture.h (BrianP)
7/19/01: Fixed cube map state problems (BrianP)
7/19/01: Added missing glGet*() cases for texture state (BrianP)
7/19/01: Make use of CR_OPENGL_VERSION_1_2, CR_ARB_texture_cube_map, etc. (BrianP)
7/19/01: Fixed assorted texture state bugs and error checks. (BrianP)