@@ -69,6 +69,7 @@ struct _SPUSTRUCT {
 SPU *crSPULoad( SPU *child, int id, char *name, char *dir );
 SPU *crSPULoadChain( int count, int *ids, char **names, char *dir );
 void crSPUCopyDispatchTable( SPUDispatchTable *dst, SPUDispatchTable *src );
+void crSPUChangeInterface( SPUDispatchTable *table, void *origFunc, void *newFunc );
 
 SPUGenericFunction crSPUFindFunction( const SPUNamedFunctionTable *table, const char *fname );
 
