@@ -3,5 +3,6 @@ TOP = ../..
 PROGRAM = cubes
 FILES = cubes timer
 OPENGL = 1
+GLUT = 1
 
 include $(TOP)/cr.mk
